# NiftyLink

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  CTestConfig.cmake  LICENSE.txt  NiftyLinkConfig.cmake.in  README.md  README.txt  UseNiftyLink.cmake.in  log_3000x2000_1.txt  log_3000x2500_1.txt  log_3000x2500_2.txt  log_3000x2500_3.txt  log_3000x2500_4.txt  log_3000x2500_5.txt  log_3000x3000_1.txt  log_3000x3000_2.txt  log_3000x3000_3.txt  log_3000x3000_4.txt  log_3000x3000_5.txt  log_3000x3500_1.txt  log_3000x3500_2.txt  log_3000x3500_3.txt  log_3000x3500_4.txt  log_3000x3500_5.txt  log_3000x4000_1.txt  log_3000x4000_2.txt  log_3000x4000_3.txt  log_3000x4000_4.txt  log_3000x4000_5.txt  test_3000x3000.txt  test_3000x3000_1.txt  test_3000x3500_1.txt
Code/Applications/: CMakeLists.txt  NiftyLink.cxx  NiftyLink.h  NiftyLink.ui  NiftyLinkApp.cxx  NiftyLinkApp.h  NiftyLinkApp.ui
Code/Libraries/: CMakeLists.txt  NiftyLinkImageMessage.cpp  NiftyLinkImageMessage.cxx  NiftyLinkImageMessage.h  NiftyLinkListenerProcess.cpp  NiftyLinkListenerProcess.cxx  NiftyLinkListenerProcess.h  NiftyLinkMessage.cpp  NiftyLinkMessage.cxx  NiftyLinkMessage.h  NiftyLinkProcessBase.cpp  NiftyLinkProcessBase.h  NiftyLinkSenderProcess.cpp  NiftyLinkSenderProcess.cxx  NiftyLinkSenderProcess.h  NiftyLinkSocketObject.cpp  NiftyLinkSocketObject.cxx  NiftyLinkSocketObject.h  NiftyLinkStatusMessage.cpp  NiftyLinkStatusMessage.cxx  NiftyLinkStatusMessage.h  NiftyLinkStringMessage.cpp  NiftyLinkStringMessage.cxx  NiftyLinkStringMessage.h  NiftyLinkTrackingDataMessage.cpp  NiftyLinkTrackingDataMessage.cxx  NiftyLinkTrackingDataMessage.h  NiftyLinkTransformMessage.cpp  NiftyLinkTransformMessage.cxx  NiftyLinkTransformMessage.h  OIGTLConnectorBase.h  OIGTLImageMessage.cpp  OIGTLImageMessage.h  OIGTLListenerProcess.cpp  OIGTLListenerProcess.h  OIGTLListenerThread.cpp  OIGTLListenerThread.h  OIGTLMessage.cpp  OIGTLMessage.h  OIGTLProcessBase.cpp  (+17 more)
Code/Libraries/Common/: CMakeLists.txt  NiftyLinkCommonWin32ExportHeader.h  NiftyLinkMacro.h  NiftyLinkMessageCounter.cxx  NiftyLinkMessageCounter.h  NiftyLinkMessageStatsContainer.cxx  NiftyLinkMessageStatsContainer.h  NiftyLinkQThread.h  NiftyLinkUtils.cpp  NiftyLinkUtils.cxx  NiftyLinkUtils.h  NiftyLinkXMLBuilder.cpp  NiftyLinkXMLBuilder.cxx  NiftyLinkXMLBuilder.h  QsDebugOutput.cxx  QsDebugOutput.h  QsLog.cpp  QsLog.cxx  QsLog.h  QsLogDest.cxx  QsLogDest.h  Utils.cpp  Utils.h
Code/Libraries/Descriptors/: NiftyLinkXMLBuilder.cxx  NiftyLinkXMLBuilder.h
Code/Libraries/MessageHandling/: NiftyLinkImageMessageHelpers.cxx  NiftyLinkImageMessageHelpers.h  NiftyLinkMessageContainer.cxx  NiftyLinkMessageContainer.h  NiftyLinkMessageManager.h  NiftyLinkStringMessageHelpers.cxx  NiftyLinkStringMessageHelpers.h  NiftyLinkTrackingDataMessageHelpers.cxx  NiftyLinkTrackingDataMessageHelpers.h  NiftyLinkTransformMessageHelpers.cxx  NiftyLinkTransformMessageHelpers.h
Code/Libraries/MessageWrappers/: NiftyLinkImageMessage.cxx  NiftyLinkImageMessage.h  NiftyLinkMessage.cxx  NiftyLinkMessage.h  NiftyLinkStatusMessage.cxx  NiftyLinkStatusMessage.h  NiftyLinkStringMessage.cxx  NiftyLinkStringMessage.h  NiftyLinkTrackingDataMessage.cxx  NiftyLinkTrackingDataMessage.h  NiftyLinkTransformMessage.cxx  NiftyLinkTransformMessage.h
Code/Libraries/Messages/: NiftyLinkImageMessage.cxx  NiftyLinkImageMessage.h  NiftyLinkImageMessageHelpers.cxx  NiftyLinkImageMessageHelpers.h  NiftyLinkMessage.h  NiftyLinkMessageContainer.cxx  NiftyLinkMessageContainer.h  NiftyLinkMessageManager.cxx  NiftyLinkMessageManager.h  NiftyLinkStatusMessage.cxx  NiftyLinkStatusMessage.h  NiftyLinkStringMessage.h  NiftyLinkTrackingDataMessage.cxx  NiftyLinkTrackingDataMessage.h  NiftyLinkTrackingDataMessageHelpers.cxx  NiftyLinkTrackingDataMessageHelpers.h  NiftyLinkTransformMessage.h  NiftyLinkTransformMessageHelpers.cxx  NiftyLinkTransformMessageHelpers.h
Code/Libraries/Network/: NiftyLinkClient.cxx  NiftyLinkClient.h  NiftyLinkClientProcess.cxx  NiftyLinkClientProcess.h  NiftyLinkListenerProcess.cxx  NiftyLinkListenerProcess.h  NiftyLinkNetworkProcess.cxx  NiftyLinkNetworkProcess.h  NiftyLinkProcessBase.cxx  NiftyLinkProcessBase.h  NiftyLinkSenderProcess.cxx  NiftyLinkSenderProcess.h  NiftyLinkServer.cxx  NiftyLinkServer.h  NiftyLinkServerProcess.cxx  NiftyLinkServerProcess.h  NiftyLinkSocketObject.cxx  NiftyLinkSocketObject.h  NiftyLinkTcpClient.cxx  NiftyLinkTcpClient.h  NiftyLinkTcpNetworkWorker.cxx  NiftyLinkTcpNetworkWorker.h  NiftyLinkTcpServer.cxx  NiftyLinkTcpServer.h  NiftyLinkTcpServerWorker.cxx  NiftyLinkTcpServerWorker.h
Code/Libraries/NetworkOpenIGTLink/: NiftyLinkClient.cxx  NiftyLinkClient.h  NiftyLinkClientProcess.cxx  NiftyLinkClientProcess.h  NiftyLinkClientSocket.cxx  NiftyLinkClientSocket.h  NiftyLinkNetworkProcess.cxx  NiftyLinkNetworkProcess.h  NiftyLinkServer.cxx  NiftyLinkServer.h  NiftyLinkServerProcess.cxx  NiftyLinkServerProcess.h  NiftyLinkServerSocket.cxx  NiftyLinkServerSocket.h  NiftyLinkSocket.cxx  NiftyLinkSocket.h
Code/Libraries/NetworkOriginal/: NiftyLinkListenerProcess.cxx  NiftyLinkListenerProcess.h  NiftyLinkProcessBase.cxx  NiftyLinkProcessBase.h  NiftyLinkSenderProcess.cxx  NiftyLinkSenderProcess.h  NiftyLinkSocketObject.cxx  NiftyLinkSocketObject.h
Code/Libraries/NetworkQt/: NiftyLinkTcpClient.cxx  NiftyLinkTcpClient.h  NiftyLinkTcpNetworkWorker.cxx  NiftyLinkTcpNetworkWorker.h  NiftyLinkTcpServer.cxx  NiftyLinkTcpServer.h
Code/Libraries/OpenIGTLink/: NiftyLinkClientSocket.cxx  NiftyLinkClientSocket.h  NiftyLinkServerSocket.cxx  NiftyLinkServerSocket.h  NiftyLinkSocket.cxx  NiftyLinkSocket.h
Code/Libraries/Socket/: NiftyLinkClientSocket.h  NiftyLinkServerSocket.cxx  NiftyLinkServerSocket.h  NiftyLinkSocket.cxx  NiftyLinkSocket.h
Code/Libraries/TimeSync/: CMakeLists.txt
Testing/Code/Applications/: CMakeLists.txt  TestClientNifTKOIGTLTracking.cxx  TestClientNifTKQtImaging.cxx  TestClientNifTKQtImaging.h  TestClientNifTKQtTracking.cxx  TestClientNifTKQtTracking.h  TestClientNifTKQtTrackingAndImaging.cxx  TestClientNifTKQtTrackingAndImaging.h  TestClientOIGTLImaging.cxx  (+5 more)
(+189 files in other folders)
